--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank=É obrigatório
+NotNull=É obrigatório
 Size= Deve ter no máximo {1} e no mínimo {2} caracteres
 Email=Deve ser um email válido
